--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
             <div class="content row">
               <div class="span7 wrapped">
-                <h2>Download Latest <small>0.16.7</small></h2>
+                <h2>Download Latest <small>0.16.8</small></h2>
                 <table class="table">
                   <thead>
                     <tr>
@@ -122,14 +122,14 @@
                       <td>Full</td>
                       <td>
                         <ul>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.7/knockback.js'>Development</a> <small>(dev, 64k)</small></li>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.7/knockback.min.js'>Production</a> <small>(min+gzip, 8k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.8/knockback.js'>Development</a> <small>(dev, 64k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.8/knockback.min.js'>Production</a> <small>(min+gzip, 8k)</small></li>
                         </ul>
                       </td>
                       <td>
                         <ul>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.7/knockback-full-stack.js'>Development</a> <small>(dev, 330k)</small></li>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.7/knockback-full-stack.min.js'>Production</a> <small>(min+gzip, 32k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.8/knockback-full-stack.js'>Development</a> <small>(dev, 330k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.8/knockback-full-stack.min.js'>Production</a> <small>(min+gzip, 32k)</small></li>
                         </ul>
                       </td>
                     </tr>
@@ -137,21 +137,21 @@
                       <td>Core</td>
                       <td>
                         <ul>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.7/knockback-core.js'>Development</a> <small>(dev, 54k)</small></li>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.7/knockback-core.min.js'>Production</a> <small>(min+gzip, 7k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.8/knockback-core.js'>Development</a> <small>(dev, 54k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.8/knockback-core.min.js'>Production</a> <small>(min+gzip, 7k)</small></li>
                         </ul>
                       </td>
                       <td>
                         <ul>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.7/knockback-core-stack.js'>Development</a> <small>(dev, 315k)</small></li>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.7/knockback-core-stack.min.js'>Production</a> <small>(min+gzip, 31k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.8/knockback-core-stack.js'>Development</a> <small>(dev, 315k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.8/knockback-core-stack.min.js'>Production</a> <small>(min+gzip, 31k)</small></li>
                         </ul>
                       </td>
                     </tr>
                   </tbody>
                 </table>
                 <p>
-                  <div><strong>*Stack</strong> provides Underscore.js + Backbone.js + Knockout.js + Knockback.js in a single file.</div><br>
+                  <div><strong>*Stack</strong> provides Underscore.js + Backbone.js + Knockout.js + Knockback.js in a single file. It is meant for getting up and running quickly in non-require, client side versions (if you use require, just require each module separately).</div><br>
                   <div><strong>*Core</strong> removes advanced features that can be included separately: localization, formatting, triggering, defaults, validation, and statistics.</div>
                 </p>
               </div>
