Fixes spelling mistake in introduction
Here is a cat screaming: :scream_cat:

--- a/getting_started_introduction.html
+++ b/getting_started_introduction.html
@@ -119,7 +119,7 @@
 <ul>
 <li><a href="getting_started_dependent_library_basics.html">Dependent Library Basics</a>: quick overview of Backbone.js and Knockout.js topics relevant to Knockback.js</li>
 <li><a href="getting_started_knockback_basics.html">Knockback Basics</a>: shows you how to bind a Backbone.Model and Backbone.Collection to DOM elements</li>
-<li><a href="getting_started_knockback_important_details.html">Knockback Important Details</a>: an explaination of a few additional things you should know before diving in</li>
+<li><a href="getting_started_knockback_important_details.html">Knockback Important Details</a>: an explanation of a few additional things you should know before diving in</li>
 <li><a href="getting_started_views_view_models_models.html">Views ViewModels Models</a>: a discussion on the relationship between Views/ViewModels/Models and whether you should you Backbone.Views (or not!)</li>
 </ul>
 
