Spelling mistakes: https://github.com/kmalakoff/knockback/pull/52

--- a/tutorial_kb_observable.html
+++ b/tutorial_kb_observable.html
@@ -141,7 +141,7 @@ ko.applyBindings(view_model, $('#kboo_read_write')[0]);</pre>
             </div>
           </div>
         </div><h2>Create Options: {localizer: constructor(value)}</h2>
-<p>Instead of a read and/or write option, you can provide a kb.LocalizedObservable derived class for custom localized of an attribute. Please see the <a href="tutorial_kb_localized_observable.html#localized_input">kb.LocalizedObservable tutorial</a> an explaination of the following:
+<p>Instead of a read and/or write option, you can provide a kb.LocalizedObservable derived class for custom localized of an attribute. Please see the <a href="tutorial_kb_localized_observable.html#localized_input">kb.LocalizedObservable tutorial</a> an explanation of the following:
 
 </p>
 <h3>ViewModel and Bindings:</h3>
