Updated versions of query and qunit

--- a/test/interactive/test-legacy.html
+++ b/test/interactive/test-legacy.html
@@ -4,8 +4,8 @@
   <head>
     <title>Knockback Interactive Tests</title>
     <!-- HELPERS -->
-    <script type="text/javascript" src="../vendor/qunit/jquery.js"></script>
-    <script type="text/javascript" src="../vendor/jquery.tmpl.js"></script>
+    <script type="text/javascript" src="../../vendor/test/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="../../vendor/test/jquery.tmpl.js"></script>
 
     <!-- LIBRARY DEPENDENCIES -->
     <script type="text/javascript" src="../../vendor/knockout-1.2.1.debug.js"></script>
@@ -18,9 +18,9 @@
 
     <!-- HELPERS -->
     <script type="text/javascript" src="../../test/_examples/build/_localization_examples.js"></script>
-    <script type="text/javascript" src="../vendor/globalize/globalize.js"></script>
-    <script type="text/javascript" src="../vendor/globalize/globalize.culture.en-GB.js"></script>
-    <script type="text/javascript" src="../vendor/globalize/globalize.culture.fr-FR.js"></script>
+    <script type="text/javascript" src="../../vendor/test/globalize/globalize.js"></script>
+    <script type="text/javascript" src="../../vendor/test/globalize/globalize.culture.en-GB.js"></script>
+    <script type="text/javascript" src="../../vendor/test/globalize/globalize.culture.fr-FR.js"></script>
 
     <!-- STYLING -->
     <style type="text/css">
