--- a/test/full-stack/test-latest-core.html
+++ b/test/full-stack/test-latest-core.html
@@ -12,10 +12,10 @@
   <script type="text/javascript" src="../../vendor/optional/backbone-modelref-0.1.5.js"></script>
 
   <!-- TESTS -->
-  <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen" />
-  <script type="text/javascript" src="../vendor/qunit/jquery.js"></script>
-  <script type="text/javascript" src="../vendor/qunit/qunit.js"></script>
-  <script type="text/javascript" src="../vendor/qunit/jslitmus.js"></script>
+  <link rel="stylesheet" href="../../vendor/test/qunit-1.11.0.css" type="text/css" media="screen" />
+  <script type="text/javascript" src="../../vendor/test/jquery-1.9.1.js"></script>
+  <script type="text/javascript" src="../../vendor/test/qunit-1.11.0.js"></script>
+  <script type="text/javascript" src="../test_helpers.js"></script>
 
   <script type="text/javascript" src="../backbone-modelref/build/test.js"></script>
   <script type="text/javascript" src="../backbone-relational/build/test.js"></script>
@@ -33,6 +33,5 @@
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
   </div>
-  <script type="text/javascript">QUnit.done = function(failures, total) {if (!total) { $('#qunit-banner').removeClass('qunit-pass').addClass('qunit-fail'); throw 'Warning: no tests run'}}</script>
 </body>
 </html>
