--- a/test/interactive/test-latest.html
+++ b/test/interactive/test-latest.html
@@ -4,8 +4,7 @@
   <head>
     <title>Knockback Interactive Tests</title>
     <!-- HELPERS -->
-    <script type="text/javascript" src="../vendor/qunit/jquery.js"></script>
-    <script type="text/javascript" src="../vendor/jquery.tmpl.js"></script>
+    <script type="text/javascript" src="../../vendor/test/jquery-1.9.1.js"></script>
 
     <!-- LIBRARY DEPENDENCIES -->
     <script type="text/javascript" src="../../vendor/knockout-2.2.1.js"></script>
@@ -18,9 +17,9 @@
 
     <!-- HELPERS -->
     <script type="text/javascript" src="../../test/_examples/build/_localization_examples.js"></script>
-    <script type="text/javascript" src="../vendor/globalize/globalize.js"></script>
-    <script type="text/javascript" src="../vendor/globalize/globalize.culture.en-GB.js"></script>
-    <script type="text/javascript" src="../vendor/globalize/globalize.culture.fr-FR.js"></script>
+    <script type="text/javascript" src="../../vendor/test/globalize/globalize.js"></script>
+    <script type="text/javascript" src="../../vendor/test/globalize/globalize.culture.en-GB.js"></script>
+    <script type="text/javascript" src="../../vendor/test/globalize/globalize.culture.fr-FR.js"></script>
 
     <!-- STYLING -->
     <style type="text/css">
