--- a/test/issues/issue46/issue46.html
+++ b/test/issues/issue46/issue46.html
@@ -33,7 +33,7 @@
 
 </div>
 
-  <script src="../../vendor/qunit/jquery.js"></script>
+  <script src="../../../vendor/test/jquery-1.9.1.js"></script>
   <script src="../../../knockback-core-stack.js"></script>
   <script src="issue46.js"></script>
 
