--- a/test/issues/issue47/issue47.html
+++ b/test/issues/issue47/issue47.html
@@ -14,7 +14,7 @@
 <div data-bind="text: title">
 </div>
 
-  <script src="../../vendor/qunit/jquery.js"></script>
+  <script src="../../../vendor/test/jquery-1.9.1.js"></script>
   <script src="../../../knockback-core-stack.js"></script>
   <script src="../../../vendor/optional/backbone-relational-0.7.0.js"></script>
   <script src="issue47.js"></script>
