--- a/test/knockback-defaults/test-latest.html
+++ b/test/knockback-defaults/test-latest.html
@@ -17,15 +17,16 @@
   <!-- HELPERS -->
   <script type="text/javascript" src="../../vendor/optional/backbone-modelref-0.1.5.js"></script>
   <script type="text/javascript" src="../../test/_examples/build/_localization_examples.js"></script>
-  <script type="text/javascript" src="../vendor/globalize/globalize.js"></script>
-  <script type="text/javascript" src="../vendor/globalize/globalize.culture.en-GB.js"></script>
-  <script type="text/javascript" src="../vendor/globalize/globalize.culture.fr-FR.js"></script>
+  <script type="text/javascript" src="../../vendor/test/globalize/globalize.js"></script>
+  <script type="text/javascript" src="../../vendor/test/globalize/globalize.culture.en-GB.js"></script>
+  <script type="text/javascript" src="../../vendor/test/globalize/globalize.culture.fr-FR.js"></script>
 
   <!-- TESTS -->
-  <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen" />
-  <script type="text/javascript" src="../vendor/qunit/jquery.js"></script>
-  <script type="text/javascript" src="../vendor/qunit/qunit.js"></script>
-  <script type="text/javascript" src="../vendor/qunit/jslitmus.js"></script>
+  <link rel="stylesheet" href="../../vendor/test/qunit-1.11.0.css" type="text/css" media="screen" />
+  <script type="text/javascript" src="../../vendor/test/jquery-1.9.1.js"></script>
+  <script type="text/javascript" src="../../vendor/test/qunit-1.11.0.js"></script>
+  <script type="text/javascript" src="../test_helpers.js"></script>
+
   <script type="text/javascript" src="build/test.js"></script>
 </head>
 <body>
@@ -35,6 +36,5 @@
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
   </div>
-  <script type="text/javascript">QUnit.done = function(failures, total) {if (!total) { $('#qunit-banner').removeClass('qunit-pass').addClass('qunit-fail'); throw 'Warning: no tests run'}}</script>
 </body>
 </html>
