--- a/test/backbone-relational/test-latest.html
+++ b/test/backbone-relational/test-latest.html
@@ -6,14 +6,14 @@
   <!-- LIBRARY DEPENDENCIES -->
   <script type="text/javascript" src="../../vendor/knockout-2.2.1.js"></script>
   <script type="text/javascript" src="../../vendor/underscore-1.4.4.js"></script>
-  <script type="text/javascript" src="../../vendor/backbone-0.9.10.js"></script>
+  <script type="text/javascript" src="../../vendor/backbone-1.0.0.js"></script>
 
   <!-- LIBRARY -->
   <script type="text/javascript" src="../../knockback.js"></script>
   <script type="text/javascript" src="../../lib/knockback-statistics.js"></script>
 
   <!-- HELPERS -->
-  <script type="text/javascript" src="../../vendor/optional/backbone-relational-0.8.0.js"></script>
+  <script type="text/javascript" src="../../vendor/optional/backbone-relational-0.8.0plus.js"></script>
 
   <!-- TESTS -->
   <link rel="stylesheet" href="../../vendor/test/qunit-1.11.0.css" type="text/css" media="screen" />
