--- a/test/backbone-modelref/test-latest.html
+++ b/test/backbone-modelref/test-latest.html
@@ -17,9 +17,9 @@
   <script type="text/javascript" src="../../vendor/optional/backbone-modelref-0.1.5.js"></script>
 
   <!-- TESTS -->
-  <link rel="stylesheet" href="../../vendor/test/qunit-1.11.0.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="../../vendor/test/qunit/qunit-1.11.0.css" type="text/css" media="screen" />
   <script type="text/javascript" src="../../vendor/test/jquery-1.9.1.js"></script>
-  <script type="text/javascript" src="../../vendor/test/qunit-1.11.0.js"></script>
+  <script type="text/javascript" src="../../vendor/test/qunit/qunit-1.11.0.js"></script>
   <script type="text/javascript" src="../test_helpers.js"></script>
 
   <script type="text/javascript" src="build/test.js"></script>
