--- a/test/full-stack/test-latest-core.html
+++ b/test/full-stack/test-latest-core.html
@@ -12,9 +12,9 @@
   <script type="text/javascript" src="../../vendor/optional/backbone-modelref-0.1.5.js"></script>
 
   <!-- TESTS -->
-  <link rel="stylesheet" href="../../vendor/test/qunit-1.11.0.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="../../vendor/test/qunit/qunit-1.11.0.css" type="text/css" media="screen" />
   <script type="text/javascript" src="../../vendor/test/jquery-1.9.1.js"></script>
-  <script type="text/javascript" src="../../vendor/test/qunit-1.11.0.js"></script>
+  <script type="text/javascript" src="../../vendor/test/qunit/qunit-1.11.0.js"></script>
   <script type="text/javascript" src="../test_helpers.js"></script>
 
   <script type="text/javascript" src="../backbone-modelref/build/test.js"></script>
