--- a/test/parse/test-latest.html
+++ b/test/parse/test-latest.html
@@ -18,9 +18,9 @@
   <script type="text/javascript" src="../../vendor/test/globalize/globalize.culture.fr-FR.js"></script>
 
   <!-- TESTS -->
-  <link rel="stylesheet" href="../../vendor/test/qunit-1.11.0.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="../../vendor/test/qunit/qunit-1.11.0.css" type="text/css" media="screen" />
   <script type="text/javascript" src="../../vendor/test/jquery-1.9.1.js"></script>
-  <script type="text/javascript" src="../../vendor/test/qunit-1.11.0.js"></script>
+  <script type="text/javascript" src="../../vendor/test/qunit/qunit-1.11.0.js"></script>
   <script type="text/javascript" src="../test_helpers.js"></script>
 
   <script type="text/javascript" src="../knockback-collection-observable/build/test.js"></script>
