Update test pages

--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -3,10 +3,10 @@
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
   <title>Knockback.js Test Suite - All Tests</title>
-  <link rel="stylesheet" href="vendor/qunit-1.11.0.css" type="text/css" media="screen" />
-  <script type="text/javascript" src="vendor/jquery-1.9.1.js"></script>
-  <script type="text/javascript" src="vendor/qunit-1.11.0.js"></script>
-  <script type="text/javascript" src="../test_helpers.js"></script>
+  <link rel="stylesheet" href="../vendor/test/qunit/qunit-1.11.0.css" type="text/css" media="screen" />
+  <script type="text/javascript" src="../vendor/test/jquery-1.9.1.js"></script>
+  <script type="text/javascript" src="../vendor/test/qunit/qunit-1.11.0.js"></script>
+  <script type="text/javascript" src="../vendor/test/qunit/qunit_test_runner.js"></script>
   <style type="text/css">
      iframe, body {height: 100%; padding:0; margin: 0;}
      iframe {float: left;}
