--- a/test/full-stack/test-bundle-underscore.html
+++ b/test/full-stack/test-bundle-underscore.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="../../vendor/test/qunit/qunit-1.11.0.css" type="text/css" media="screen" />
   <script type="text/javascript" src="../../vendor/test/jquery-1.9.1.js"></script>
   <script type="text/javascript" src="../../vendor/test/qunit/qunit-1.11.0.js"></script>
-  <script type="text/javascript" src="../test_helpers.js"></script>
+  <script type="text/javascript" src="../../vendor/test/qunit/qunit_test_runner.js"></script>
 
   <script type="text/javascript" src="../backbone-modelref/build/test.js"></script>
   <script type="text/javascript" src="../backbone-relational/build/test.js"></script>
