--- a/test/knockback-observable/test-latest-amd-core.html
+++ b/test/knockback-observable/test-latest-amd-core.html
@@ -4,26 +4,14 @@
 <head>
   <title>Knockback Observable Test Suite (Core AMD)</title>
 
-  <script src="../../vendor/test/require.js"></script>
-  <script type="text/javascript">
-    require.config({
-      paths: {
-        'underscore': "../../vendor/underscore-1.4.4",
-        'backbone': "../../vendor/backbone-1.0.0",
-        'knockout': "../../vendor/knockout-2.2.1",
-        'knockback': "../../knockback-core",
-        'knockback-statistics': "../../lib/knockback-statistics"
-      }
-    });
-  </script>
-
   <!-- TESTS -->
+  <script src="../../vendor/test/require.js"></script>
   <link rel="stylesheet" href="../../vendor/test/qunit/qunit-1.11.0.css" type="text/css" media="screen" />
   <script type="text/javascript" src="../../vendor/test/jquery-1.9.1.js"></script>
   <script type="text/javascript" src="../../vendor/test/qunit/qunit-1.11.0.js"></script>
   <script type="text/javascript" src="../../vendor/test/qunit/qunit_test_runner.js"></script>
 
-  <script type="text/javascript" src="build/test-amd.js"></script>
+  <script type="text/javascript" src="build/test-latest-amd-core.js"></script>
 </head>
 <body>
   <div>
