Updated documentation to generalize between Parse and Backbone

--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -27,6 +27,7 @@
 
   <div class="test-block">
     <h1 class="qunit-header">Knockback.js - All Tests (Latest)</h1>
+    <iframe src="knockback-core/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback-observable/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback-collection-observable/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback-view-model/test-latest.html" scrolling="auto" frameborder="0"></iframe>
@@ -64,6 +65,7 @@
 
   <div class="test-block">
     <h1 class="qunit-header">Knockback.js - All Tests (Deprecated)</h1>
+    <iframe src="knockback-core/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback-observable/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback-collection-observable/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback-view-model/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
